--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
                 MEDIA MONKS
             </h1>
         </div>
+
+        <!-- using this we will be able to get the indicators -->
         <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
             <ol class="carousel-indicators">
                 <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -37,7 +39,9 @@
                 <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
 
               </ol>
-            
+
+
+            <!-- This is the bootstrap carousel, using this we will be able to switch the images -->
             <div class="carousel-inner">
               <div class="carousel-item active">
                 <img class="d-block w-100" src="./images/woman_and_sunset_514534.jpg" alt="First slide">
